--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h2>Welcome To Albeylsan General Trading</h2>
-            <p>Albeylsan is a leading exporter of fresh, high-quality fruits and vegetables. We specialize in sourcing and distributing a wide variety of produce from Sudan to global markets.</p>
+            <h2></h2>
+            <p></p>
                   <a href="#about" class="btn-get-started">Get Started</a>
           </div>
         </div>
@@ -101,7 +101,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About Us</h2>
-        <p>Albeylsan is a leading exporter of fresh, high-quality fruits and vegetables.</p>
+        <p>Welcome To Albeylsan General Trading</p>
+        <p>Albeylsan is a leading exporter of fresh, high-quality fruits and vegetables. We specialize in sourcing and distributing a wide variety of produce from Sudan to global markets.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
