--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About Us</h2>
-        <p>Welcome To Albeylsan General Trading</p>
-        <p>Albeylsan is a leading exporter of fresh, high-quality fruits and vegetables. We specialize in sourcing and distributing a wide variety of produce from Sudan to global markets.</p>
+        <p>Welcome To Albeylsan General Trading LLC</p>
+        <p>Albeylsan is a leading exporter of fresh, high-quality Foodstuff. We specialize in sourcing and distributing a wide variety of produce from all markets to global markets.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -114,7 +114,7 @@
           <div class="col-lg-6 content">
             <h3>Albeylsan General Trading LLC</h3>
             <p class="fst-italic">
-            Albeylsan General Trading LLC is your trusted partner for premium fruits and vegetables.
+            Albeylsan General Trading LLC is your trusted partner for premium foodStuff.
            </p>
             <ul>
               <li><i class="bi bi-check2-all"></i> <span>Our commitment to excellence is reflected in our rigorous quality control standards and our dedication to sustainable farming practices.</span></li>
@@ -137,7 +137,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Why Us</h2>
-        <p>Albeylsan General Trading LLC is your trusted partner for premium meat , fruits and vegetables.</p>
+        <p>Albeylsan General Trading LLC is your trusted partner for premium Foodstuff.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -153,7 +153,7 @@
               <h2 class="title"><a href="#" class="stretched-link">Our Mission</a></h2>
               <p>
                 To be a trusted partner in the global food supply chain, delivering exceptional quality, customer satisfaction, and ethical sourcing practices.
-                Empowering communities and promoting sustainable agriculture through the export of premium fruits and vegetables, sourced responsibly and delivered with integrity.
+                Empowering communities and promoting sustainable agriculture through the export of premium Foodstuff, sourced responsibly and delivered with integrity.
               </p>
             </div>
           </div><!-- End Card Item -->
@@ -362,7 +362,7 @@
   <footer id="footer" class="footer light-background">
     <div class="container">
       <h3 class="sitename">ALBEYLSAN</h3>
-      <p>Albeylsan General Trading LLC is your trusted partner for premium meat , fruits and vegetables.</p>
+      <p>Albeylsan General Trading LLC is your trusted partner for premium Foodstuff.</p>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
@@ -379,7 +379,7 @@
           <!-- You can delete the links only if you've purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-          Designed by <a href="https://bootstrapmade.com/">Tamer Yousif</a>
+          Designed by <a href="https://bootstrapmade.com/">wjhatk</a>
         </div>
       </div>
     </div>
